PR c++/80614 - Wrong mangling for C++17 noexcept type

* mangle.c (write_type): Put the eh spec back on the function type.

From-SVN: r249321